--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -258,7 +258,7 @@
     <string name="home_screen.notification.title">सूचना </string>
     <string name="home_screen.suggested_topic.title">सुचविलेले विषय </string>
     <string name="home_screen.profile.title">माझा अकाउंट </string>
-    <string name="home_screen.select_an_option.title">एक पर्याय निवडा </string>
+    <string name="home_screen.select_an_option.title">शोध</string>
     <string name="home_screen.trending.become_blogger">तुमची कथा शेअर करा </string>
     <string name="home_screen.trending.first_video_upload">व्हिडीओस </string>
     <string name="home_screen.explore.title">शोधा </string>
@@ -352,7 +352,7 @@
     <string name="myprofile.following_label">फॉलोविंग </string>
     <string name="myprofile.followers_label">फॉलोवर्स </string>
     <string name="myprofile.section.articles_label">लेख</string>
-    <string name="myprofile.section.short_story_label">#100 शब्दांची गोष्ट</string>
+    <string name="myprofile.section.short_story_label">100 शब्दांची गोष्ट</string>
     <string name="myprofile.section.videos_label">मॉम वलॉग्स</string>
     <string name="myprofile.section.activity_label">गोष्टी </string>
     <string name="myprofile.section.myranking_label">माझा क्रमांक </string>
@@ -623,7 +623,7 @@
     <string name="article_listing.type.trending_label">ट्रेंडिंग</string>
     <string name="article_listing.type.editor_label">संपादकांची निवड</string>
     <string name="article_listing.type.todays_best_label">आजचे बेस्ट</string>
-    <string name="article_listing.type.short_story_label">100WORDSTORY</string>
+    <string name="article_listing.type.short_story_label">100 शब्दांची गोष्ट</string>
     <string name="article_listing.type.for_you_label">ुमच्या साठी</string>
     <string name="article_listing.type.languages_label">भाषा </string>
     <string name="article_listing.type.videos_label">व्हिडीओस</string>
@@ -802,6 +802,7 @@
     <string name="profile_completion">Profile Completion</string>
     <string name="improve_reachability">Improve the reachability by updating the bio.</string>
     <string name="choose_account">Choose an account to continue</string>
+    <string name="create_content">Every mother has a story. What\'s yours? Pour out yours like a Blog, a 100 Word Story, or a Video.</string>
     <string name="write_about_yourself">Write about yourself</string>
     <string name="child_details">Child Details</string>
     <string name="add_child_details">Add Child Details</string>
@@ -831,4 +832,7 @@
     <string name="full_name">FULL NAME</string>
     <string name="email_and_password">EMAIL AND PASSWORD</string>
     <string name="location">LOCATION</string>
+    <string name="search">Search any article or author</string>
+    <string name="new_label">NEW</string>
+    <string name="view_profile">view profile</string>
 </resources>
