--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -256,7 +256,7 @@
     <string name="home_screen.notification.title">NOTIFICATION</string>
     <string name="home_screen.suggested_topic.title">SUGGESTED TOPICS</string>
     <string name="home_screen.profile.title">MY ACCOUNT</string>
-    <string name="home_screen.select_an_option.title">SELECT AN OPTION</string>
+    <string name="home_screen.select_an_option.title">கண்டுபிடி</string>
     <string name="home_screen.trending.become_blogger">SHARE YOUR STORY</string>
     <string name="home_screen.trending.first_video_upload">VIDEOS</string>
     <string name="home_screen.explore.title">EXPLORE</string>
@@ -801,6 +801,7 @@
     <string name="update">UPDATE</string>
     <string name="improve_reachability">Improve the reachability by updating the bio.</string>
     <string name="choose_account">Choose an account to continue</string>
+    <string name="create_content">Every mother has a story. What\'s yours? Pour out yours like a Blog, a 100 Word Story, or a Video.</string>
     <string name="write_about_yourself">Write about yourself</string>
     <string name="child_details">Child Details</string>
     <string name="add_child_details">Add Child Details</string>
@@ -830,4 +831,7 @@
     <string name="full_name">FULL NAME</string>
     <string name="email_and_password">EMAIL AND PASSWORD</string>
     <string name="location">LOCATION</string>
+    <string name="search">Search Any article or author</string>
+    <string name="new_label">NEW</string>
+    <string name="view_profile">view profile</string>
 </resources>
