--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -834,4 +834,5 @@
     <string name="search">Search Any article or author</string>
     <string name="new_label">NEW</string>
     <string name="view_profile">view profile</string>
+    <string name="choose_video_category">Choose Video Category</string>
 </resources>
