--- a/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-mr/strings.xml
@@ -837,4 +837,7 @@
     <string name="view_profile">view profile</string>
     <string name="choose_video_category">Choose Video Category</string>
     <string name="enter_valid_email">Please enter valid email id</string>
+    <string name="time_limit">(जास्तीत जास्त वेळ %1$s)</string>
+    <string name="upload_larger_video">Please upload a video greater than 5 seconds</string>
+    <string name="minutes_label">मिनिटे</string>
 </resources>
