--- a/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-ta/strings.xml
@@ -213,7 +213,7 @@
     <string name="editor.spell_check.title">பிழைதிருத்தும்</string>
     <string name="editor.spell_check.message">நீங்கள் எழுத்துப்பிழை சரிபார்த்திருக்கிறீர்களா?</string>
     <string name="editor.spell_check.no">இல்லை</string>
-    <string name="editor.spell_check.continue">ஆம், வெளியிடுவதை தொடர்க</string>
+    <string name="editor.spell_check.continue">ஆம், வெளியிடவும்</string>
     <string name="editor.banner.message">உங்கள் விருப்பப்படி ஒரு மொழியில் பிளாக் செய்யுங்கள் </string>
     <string name="editor.last_saved_at">கடைசியாக சேமிக்கப்பட்டது %1$s</string>
     <string name="editor.last_saved_on">கடைசியாக சேமிக்கப்பட்ட தேதி %1$s</string>
@@ -250,7 +250,7 @@
     <string name="home_screen.profile.title">என் அக்கௌன்ட்</string>
     <string name="home_screen.select_an_option.title">கண்டுபிடி</string>
     <string name="home_screen.trending.become_blogger">உங்கள் கதையைப்  பகிர்ந்துகொள்ளுங்கள்</string>
-    <string name="home_screen.trending.first_video_upload">வீடியோக்கள்</string>
+    <string name="home_screen.trending.first_video_upload">காணொளிகள்</string>
     <string name="home_screen.explore.title">ஆராய்ந்து</string>
     <string name="home_screen.upcoming_events.title">எதிர்வரும் நிகழ்வுகள்</string>
     <string name="home_screen.kids_res.title">குழந்தைகளுக்கு வேண்டியன கிடைக்குமிடம்</string>
@@ -272,7 +272,7 @@
 
     <string name="onboarding_desc_array.tutorial_1.blogs">பதிவுகள்</string>
     <string name="onboarding_desc_array.tutorial_1.videos">மாம்விலாக்ஸ்</string>
-    <string name="onboarding_desc_array.tutorial_2.english">ஆங்கிலம்</string>
+    <string name="onboarding_desc_array.tutorial_2.english">English</string>
     <string name="onboarding_desc_array.tutorial_2.hindi">ஹிந்தி</string>
     <string name="onboarding_desc_array.tutorial_2.bengali">பெங்காலி </string>
     <string name="onboarding_desc_array.tutorial_2.marathi">மராத்தி</string>
@@ -432,14 +432,14 @@
     <string name="blog_setup.okay">சரி </string>
     <string name="blog_setup.blog_title_label">ப்ளாக் தலைப்பு</string>
     <string name="blog_setup.blog_title_desc">இது உங்கள் டிஜிட்டல் புத்தகத்தின் தலைப்பைப் போன்றது, நீங்கள் இங்கே வெளியிடும் அனைத்து ப்ளாகுகளையும் விவரிப்பது.. எ. கா: ஒரு தாயின் டயரி, எனது குரல்</string>
-    <string name="blog_setup.hint_blog_title">Type here </string>
+    <string name="blog_setup.hint_blog_title">இங்கே எழுதுங்கள்</string>
     <string name="blog_setup.about_yourself_label">உங்களை பற்றி</string>
     <string name="blog_setup.about_desc">உங்களைப் பற்றி வாசகர்களிடம் சொல்க </string>
-    <string name="blog_setup.profile_pic_label">சுயவிவர படம்</string>
+    <string name="blog_setup.profile_pic_label">உங்கள் புகைப்படம்</string>
     <string name="blog_setup.profile_pic_desc">இது உங்கள் வாசகர்கள் பார்வைக்கு வரும்.மேலும்  உங்கள் எழுத்துடன் தொடர்பு கொள்ளவும் உதவும்.  </string>
     <string name="blog_setup.your_details">உங்களை பற்றி</string>
     <string name="blog_setup.hint_phone">தொலைபேசி எண்</string>
-    <string name="blog_setup.save_publish">சேமி &amp; வெளியிடு</string>
+    <string name="blog_setup.save_publish">பதிவு &amp; வெளியிடு</string>
 
     <string name="ranking.toolbar.title">என் ரேங்கிங்</string>
     <string name="ranking.improve_view.title">பற்றி</string>
@@ -464,7 +464,7 @@
     <string name="editor.publish">வெளியிட</string>
 
     <string name="add_article_topics.toolbar.title">தலைப்புகள் தேர்ந்தெடுக்கவும்</string>
-    <string name="add_article_topics.clear_all">அனைத்தையும் அழி</string>
+    <string name="add_article_topics.clear_all">அழி</string>
     <string name="add_article_topics.min_topics">தொடர்வதற்கு ஒரு தலைப்பையேனும் தேர்ந்தெடுக்கவும்</string>
     <string name="add_article_topics.max_topics">நீங்கள் அதிகபட்சம் 8 தலைப்புகளை தேர்வு செய்யலாம்</string>
     <string name="add_article_topics.apply">உபயோகி</string>
@@ -555,8 +555,8 @@
     <string name="explore.events.featured_lbl">சிறப்பு நிகழ்வுகள்</string>
     <string name="explore.events.upcoming_lbl">எதிர்வரும் நிகழ்வுகள்</string>
 
-    <string name="all_videos.toolbar.title">வீடியோக்கள்</string>
-    <string name="all_videos.tabbar.momspresso_label">மாம்ஸ்ப்ரெஸ்ஸோ TV  </string>
+    <string name="all_videos.toolbar.title">காணொளிகள்</string>
+    <string name="all_videos.tabbar.momspresso_label">மாம்ஸ்ப்ரெஸ்ஸோ டிவி</string>
     <string name="all_videos.tabbar.funny_label">மாம்விலாக்ஸ்</string>
     <string name="all_videos.funny_videos.no_videos">ஒரு மாம்-விலாக்ஸும் சேர்க்கப்படவில்லை.</string>
 
@@ -618,7 +618,7 @@
     <string name="article_listing.type.for_you_label">உங்களுக்காக</string>
     <string name="article_listing.type.short_story_label">100 வார்த்தை கதை</string>
     <string name="article_listing.type.languages_label">உங்களுக்காக</string>
-    <string name="article_listing.type.videos_label">வீடியோக்கள்</string>
+    <string name="article_listing.type.videos_label">காணொளிகள்</string>
     <string name="article_listing.type.recent_label">அண்மையில்</string>
 
     <string name="lang_sel.welcome_msg">WELCOME TO MOMSPRESSO</string>
@@ -632,7 +632,7 @@
 
     <string name="all_categories_label">அனைத்தும்</string>
 
-    <string name="language_label.english">ஆங்கிலம்</string>
+    <string name="language_label.english">English</string>
     <string name="language_label.hindi">हिंदी</string>
     <string name="language_label.marathi">मराठी</string>
     <string name="language_label.bengali">বাংলা</string>
@@ -740,7 +740,7 @@
     <string name="groups.sections.discussions">விவாதம்</string>
     <string name="groups.sections.blogs">ப்ளாகுகள்</string>
     <string name="groups.sections.photos">படங்கள்</string>
-    <string name="groups.sections.videos">வீடியோ</string>
+    <string name="groups.sections.videos">காணொளிகள்</string>
     <string name="groups.sections.top_posts">சிறந்த பதிவுகள்</string>
     <string name="groups.sections.polls">வாக்கெடுப்பு</string>
     <string name="groups.search_in">தேடுக</string>
@@ -799,8 +799,8 @@
     <string name="add_child_details">Add Child Details</string>
     <string name="contact_details">Contact Details</string>
 
-    <string name="navigation_bar.home">ஹோம்</string>
-    <string name="navigation_bar.discover">கண்டுபிடி</string>
+    <string name="navigation_bar.home">முகப்பு</string>
+    <string name="navigation_bar.discover">கண்டறிய</string>
     <string name="navigation_bar.create">உருவாக்க</string>
     <string name="navigation_bar.notifications">அறிவிப்புகள்</string>
     <string name="navigation_bar.groups">குழுக்கள்</string>
@@ -814,9 +814,9 @@
     <string name="coachmark.app_setting">ஆப் அமைப்புகள்: உங்கள் ஆப்பின் விருப்பத்தேர்வுகள் மற்றும் மொழி விருப்பங்களை ஒரே இடத்தில் திருத்தலாம். அறிவிப்புகளுக்கு, வகைகளுக்கு இங்கே பதிவு செய்யவும்.</string>
     <string name="coachmark.publish">வெளியிடு (சுயவிவரம்): உங்களுடைய வெளியிடப்பட்ட கட்டுரைகள், கதைகள் மற்றும் மாம் வ்ளாக்ஸை ஒரே இடத்தில் பார்க்கலாம்.</string>
     <string name="mobile">MOBILE NO</string>
-    <string name="continue_writing">Continue Writing(Drafts)</string>
+    <string name="continue_writing">எழுதுவதை தொடரவும் (வரைவு பதிப்பு)</string>
     <string name="app_settings">ஆப் அமைப்புகள்</string>
-    <string name="create_new">Create New</string>
+    <string name="create_new">புதிதாக உருவாக்கு</string>
     <string name="name_optional">NAME (optional)</string>
     <string name="name">NAME</string>
     <string name="updated">Updated :</string>
@@ -832,5 +832,5 @@
     <string name="upload_larger_video">அடடா! உங்கள் வீடியோ குறைந்தது 5 வினாடிகள் இருக்க வேண்டும்.</string>
     <string name="minutes_label">நிமிடங்கள்</string>
     <string name="women_only">Oops! This section is for women only. You can, however, continue to read our other content</string>
-    <string name="check_out_momvlog" >Momspresso\n\nCheck out this interesting blog post\n</string>
+    <string name="check_out_momvlog">Momspresso\n\nCheck out this interesting blog post\n</string>
 </resources>
