--- a/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-hi/strings.xml
@@ -642,6 +642,8 @@
     <string name="language_label.bengali">বাংলা</string>
     <string name="language_label.tamil">தமிழ்</string>
     <string name="language_label.telegu">తెలుగు</string>
+    <string name="language_label.kannada">ಕನ್ನಡ</string>
+    <string name="language_label.malayalam">മലയാളം</string>
 
     <string name="choose_pref_lang">अपनी पसंदीदा भाषा चुनें</string>
     <string name="choose_pref_lang.cancel">कैंसिल</string>
@@ -741,7 +743,7 @@
     <string name="groups.invitation_only_gp">आमंत्रण केवल समूह</string>
     <string name="groups.created">Created</string>
     <string name="groups.member_label">सदस्य </string>
-    <string name="groups.sections.about">ABOUT</string>
+    <string name="groups.sections.about">बारे में</string>
     <string name="groups.sections.discussions">चर्चा </string>
     <string name="groups.sections.blogs">ब्लोग्स</string>
     <string name="groups.sections.photos">फोटो </string>
@@ -841,4 +843,14 @@
     <string name="minutes_label">मिनट</string>
     <string name="women_only">ओह हो\! यह सेक्शन केवल महिलाओं के लिए है। हालांकि, आप हमारा कांटेंट पढ़ना जारी रख सकते हैं।</string>
     <string name="check_out_momvlog">Momspresso\n\nCheck out this interesting blog post\n</string>
+    <string name="take_picture_from_camera">Take picture from camera</string>
+    <string name="select_an_image">Select an image</string>
+    <string name="related_videos">RELATED VIDEOS</string>
+    <string name="popular_videos">POPULAR VIDEOS</string>
+    <string name="delete_comment">DELETE COMMENT</string>
+    <string name="edit_comment">EDIT COMMENT</string>
+    <string name="report">REPORT</string>
+    <string name="select_atleast_one_topic">Please choose atleast one topic to continue</string>
+    <string name="your_article_is_successfully_bookmarked">Your article is successfully bookmarked.</string>
+    <string name="successfully_updated">Successfully updated!</string>
 </resources>
