--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -892,4 +892,12 @@
     <string name="select_atleast_one_topic">Please choose atleast one topic to continue</string>
     <string name="your_article_is_successfully_bookmarked">Your article is successfully bookmarked.</string>
     <string name="successfully_updated">Successfully updated!</string>
+    <string name="last_name">LAST NAME</string>
+    <string name="first_name">FIRST NAME</string>
+    <string name="phone">PHONE</string>
+    <string name="language">LANGUAGE</string>
+    <string name="not_working">Not Working</string>
+    <string name="working">Working</string>
+    <string name="save_continue"><![CDATA[SAVE & CONTINUE]]></string>
+    <string name="rewards_header_title">MOMSPRESSO REWARDS</string>
 </resources>
